Fix footer on mobile

--- a/sass/_mobile.sass
+++ b/sass/_mobile.sass
@@ -11,14 +11,14 @@
 	width: 100%
 	height: auto
 
-.postnav .caption
+.nav .caption
 	font-size: 1em !important
 
 @media (max-width: 630px)
-	.container
-		//min-height: calc(100% - $m-footer-height)
-		min-height: calc(100% - 240px)
-		padding-bottom: $m-footer-height
+	body
+		.container
+			//min-height: calc(100% - $m-footer-height)
+			min-height: calc(100% - 220px)
 
 		> footer
 			height: $m-footer-height
