--- a/sass/_vars.sass
+++ b/sass/_vars.sass
@@ -1,4 +1,4 @@
 $mobile-max: 800px
 
 $footer-height: 96px
-$m-footer-height: 240px
+$m-footer-height: 220px
